devops-guy-beginner-course/sample-stateful-set/example-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hit-counter-app
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: aimvector/api-redis-ha:1.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hit-counter-lb
  namespace: example
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: myapp
---
